<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.opiumfive.coinapp.ui.feature.auth.activity.AuthActivity">

    <ImageView
        android:id="@+id/authBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/authTitle"
        style="@style/TextView.Regular.White.32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/authContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authTitle"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg_login"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/authForgot"
        style="@style/TextView.Regular.White.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_half"
        android:background="@drawable/bg_auth_button"
        android:paddingBottom="@dimen/spacing_half"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_half"
        android:text="@string/forgot_my_password" />

    <TextView
        android:id="@+id/authRegister"
        style="@style/TextView.Regular.White.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authPoweredBy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_half"
        android:background="@drawable/bg_auth_button"
        android:paddingBottom="@dimen/spacing_half"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_half"
        android:text="@string/i_am_new_user" />

    <TextView
        android:id="@+id/authPoweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authLogotype"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_half"
        android:text="@string/powered_by"
        android:textColor="@color/blue" />

    <ImageView
        android:id="@+id/authLogotype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_big"
        android:src="@drawable/ic_logo_snowfox" />
</RelativeLayout>