<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/newWalletClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/spacing_half"
        android:padding="@dimen/spacing_normal"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/newWalletTitle"
        style="@style/TextView.Bold.Black.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        android:text="@string/add_wallet" />

    <LinearLayout
        android:id="@+id/newWalletAddressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newWalletTitle"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newWalletAddress"
            style="@style/TextView.Bold.Black.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/newWalletQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_half"
            app:srcCompat="@drawable/ic_qr_code" />
    </LinearLayout>

    <EditText
        android:id="@+id/newWalletName"
        style="@style/TextView.Bold.Black.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newWalletAddressContainer"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:hint="@string/name_optional"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />

    <com.opiumfive.coinapp.ui.base.view.MainButton
        android:id="@+id/newWalletButton"
        style="@style/AccentMainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newWalletName"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:enabled="false"
        android:text="@string/add_wallet" />
</RelativeLayout>